[project]
name = "libraries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pymdown-extensions>=10.15",
    "rich-pyfiglet>=0.1.4",
    "textual-pyfiglet>=0.9.0",
    "textual-slidecontainer>=0.4.2",
    "textual-window>=0.3.4",
    "textual-coloromatic>=0.1.1",
]
